# HW6-HMM

./: Pipfile  README.md  main.py  pyproject.toml
hmm/: hmm.py
test/: test_hmm.py
workflows/: ci.yml
