[build-system]
requires = [
	"flit_core >=3.2,<4"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "hmm"
authors = [{name = "Taylor Womack", email = "Taylor.Womack@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", 
	"numpy" 
]

[project.urls]
Home = "https://github.com/BMI203-2024/HW6-HMM"